--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ target/
 .springBeans
 .sts4-cache
 
+
+
+
+
 ### IntelliJ IDEA ###
 .idea
 *.iws
@@ -31,3 +35,11 @@ build/
 
 ### VS Code ###
 .vscode/
+target/
+*.log
+*.iml
+.idea/
+*.class
+*.jar
+*.war
+*.db
