--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,4 +1,5 @@
-name: Build and Test Spring Boot App
+
+name: Build and Run Spring Boot
 
 on:
   push:
@@ -7,26 +8,29 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  build-and-run:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout repo
+      # Checkout repository
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Setup JDK (Java 17 for Spring Boot 3.x)
-      - name: Set up JDK 17
+      # Set up Java (use 17 for Spring Boot 3.x)
+      - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'temurin'
           cache: maven
 
-      # Build with Maven
+      # Build the application
       - name: Build with Maven
         run: mvn -B package --file pom.xml
 
-      # Run Tests
-      - name: Run Tests
-        run: mvn test
+      # Run the Spring Boot app
+      - name: Run Spring Boot App
+        run: |
+          nohup java -jar target/*.jar > app.log 2>&1 &
+          sleep 20
+          curl -v http://localhost:8080/ || true
