--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -1,4 +1,70 @@
-name: apply.yml
+name: Build Spring Boot & Terraform Check
+
 on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
+  build-and-terraform:
+    runs-on: ubuntu-latest
+
+    steps:
+      # Checkout repository
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      # Configure AWS credentials for Terraform
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Verify AWS Identity
+        run: aws sts get-caller-identity
+
+      # Set up Java (Spring Boot)
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: maven
+
+      # Build the Spring Boot app
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+
+      # Run the Spring Boot app (test)
+      - name: Run Spring Boot App
+        run: |
+          nohup java -jar target/*.jar > app.log 2>&1 &
+          sleep 20
+          curl -v http://localhost:9090/ || true
+
+      # Set up Terraform
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.9.5
+
+      # Terraform Init
+      - name: Terraform Init
+        run: terraform -chdir=infra init
+
+      # Terraform Format Check
+      - name: Terraform Fmt Check
+        run: terraform -chdir=infra fmt -check
+
+      # Terraform Validate
+      - name: Terraform Validate
+        run: terraform -chdir=infra validate
+
+      # Terraform Plan
+      - name: Terraform Plan
+        run: terraform -chdir=infra plan
+
+
