--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,36 +1,47 @@
-
-name: Build and Run Spring Boot
-
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-jobs:
-  build-and-run:
-    runs-on: ubuntu-latest
-
-    steps:
-      # Checkout repository
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      # Set up Java (use 17 for Spring Boot 3.x)
-      - name: Set up JDK 21
-        uses: actions/setup-java@v3
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-          cache: maven
-
-      # Build the application
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
-
-      # Run the Spring Boot app
-      - name: Run Spring Boot App
-        run: |
-          nohup java -jar target/*.jar > app.log 2>&1 &
-          sleep 20
-          curl -v http://localhost:9090/ || true
+#
+#name: Build and Run Spring Boot
+#
+#on:
+#  push:
+#    branches: [ "main" ]
+#  pull_request:
+#    branches: [ "main" ]
+#
+#jobs:
+#  build-and-run:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      # Checkout repository
+#      - name: Checkout code
+#        uses: actions/checkout@v3
+#
+#      - name: Configure AWS credentials
+#        uses: aws-actions/configure-aws-credentials@v4
+#        with:
+#            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#            aws-region: ${{ secrets.AWS_REGION }}
+#
+#             # 👇 Test if GitHub can connect to AWS
+#              - name: Verify AWS Identity
+#                run: aws sts get-caller-identity
+#
+#      # Set up Java (use 17 for Spring Boot 3.x)
+#      - name: Set up JDK 21
+#        uses: actions/setup-java@v3
+#        with:
+#          java-version: '21'
+#          distribution: 'temurin'
+#          cache: maven
+#
+#      # Build the application
+#      - name: Build with Maven
+#        run: mvn -B package --file pom.xml
+#
+#      # Run the Spring Boot app
+#      - name: Run Spring Boot App
+#        run: |
+#          nohup java -jar target/*.jar > app.log 2>&1 &
+#          sleep 20
+#          curl -v http://localhost:9090/ || true
