--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -66,5 +66,10 @@ jobs:
       # Terraform Plan
       - name: Terraform Plan
         run: terraform -chdir=infrastructure plan
+          
+          # Terraform Apply (auto approve)
+               - name: Terraform Apply
+               if: github.ref == 'refs/heads/main'
+               run: terraform -chdir=infrastructure apply -auto-approve
 
 
