--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -5,6 +5,7 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  workflow_dispatch:   # 👈 allows manual trigger from Actions tab
 
 jobs:
   build-and-terraform:
@@ -15,7 +16,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Configure AWS credentials for Terraform & ECR
+      # Configure AWS credentials
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -26,7 +27,7 @@ jobs:
       - name: Verify AWS Identity
         run: aws sts get-caller-identity
 
-      # Set up Java (Spring Boot)
+      # Build Spring Boot app
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
@@ -34,61 +35,10 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      # Build the Spring Boot app
       - name: Build with Maven
         run: mvn -B package --file pom.xml
 
-      # ✅ Optional sanity check (don’t fail if app doesn’t respond yet)
-      - name: Run Spring Boot App
-        run: |
-          nohup java -jar target/*.jar > app.log 2>&1 &
-          sleep 20
-          curl -v http://localhost:9090/ || true
-
-      # Get AWS account ID
-      - name: Get AWS Account ID
-        id: account
-        run: echo "account_id=$(aws sts get-caller-identity --query Account --output text)" >> $GITHUB_OUTPUT
-
-      # Login to ECR
-      - name: Login to Amazon ECR
-        uses: aws-actions/amazon-ecr-login@v2
-
-
-
-
-
-      # -----------------------
-      # Terraform steps
-      # -----------------------
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: 1.9.5
-
-      - name: Terraform init
-        run: terraform -chdir=infrastructure init
-
-      - name: Terraform Fmt Check
-        run: terraform -chdir=infrastructure fmt -check
-
-      - name: Terraform Validate
-        run: terraform -chdir=infrastructure validate
-
-      - name: Terraform Plan
-        run: terraform -chdir=infrastructure plan
-
-      # ✅ Only apply on push to main (not PRs)
-      - name: Terraform Apply
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        run: terraform -chdir=infrastructure apply -auto-approve
-
-
-
-          # -----------------------
-          # Docker build & push
-          # -----------------------
+      # Build Docker & push to ECR
       - name: Get AWS Account ID
         id: account
         run: echo "account_id=$(aws sts get-caller-identity --query Account --output text)" >> $GITHUB_OUTPUT
@@ -101,8 +51,30 @@ jobs:
           AWS_ACCOUNT_ID: ${{ steps.account.outputs.account_id }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
         run: |
-           IMAGE_REPO="${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${{ secrets.ECR_REPO_NAME }}"
-           IMAGE_TAG="latest"
-           echo "Building image: $IMAGE_REPO:$IMAGE_TAG"
-           docker build -t $IMAGE_REPO:$IMAGE_TAG .
-           docker push $IMAGE_REPO:$IMAGE_TAG
+          IMAGE_REPO="${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${{ secrets.ECR_REPO_NAME }}"
+          IMAGE_TAG="latest"
+          echo "Building image: $IMAGE_REPO:$IMAGE_TAG"
+          docker build -t $IMAGE_REPO:$IMAGE_TAG .
+          docker push $IMAGE_REPO:$IMAGE_TAG
+
+      # Terraform steps
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.9.5
+
+      - name: Terraform init
+        run: terraform -chdir=infrastructure init
+
+      - name: Terraform fmt
+        run: terraform -chdir=infrastructure fmt -check
+
+      - name: Terraform validate
+        run: terraform -chdir=infrastructure validate
+
+      - name: Terraform plan
+        run: terraform -chdir=infrastructure plan
+
+      - name: Terraform apply
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        run: terraform -chdir=infrastructure apply -auto-approve
